# umamusume_personality

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml  ruff.toml
backend/app/: auth.py  main.py  models.py  rag.py  umamusume_data.py
backend/data/analysis/: categorical_statistics.json  correlation_matrix.csv  missing_values.json  numerical_statistics.csv
backend/data/processed/: data_summary.json
backend/spaceship_titanic/: .gitignore  README.md  pyproject.toml
backend/spaceship_titanic/src/: __init__.py  data_preprocessing.py  download_data.py  exploratory_analysis.py  inspect_data.py  model.py  predict.py  setup_kaggle.py  test_japanese_plot.py  train.py  update_font_cache.py  verify_kaggle_access.py
backend/spaceship_titanic/tests/: __init__.py  test_preprocessing.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/api/: authApi.ts
frontend/src/components/: LoginForm.tsx  PersonaityQuiz.tsx  PersonalityQuiz.tsx
