[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Daku-on <113434878+Daku-on@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
openai = "^1.47.0"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.0"
python-multipart = "^0.0.10"
langchain-openai = "^0.2.0"
faiss-cpu = "^1.8.0.post1"
pyjwt = "^2.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
